tests/liberr_parse/liberr_parse.exp
Error ------------------------------------------------------------------------------------------ libs/parse_error.js:8:3

Unexpected identifier, expected the token `,` [ParseError]

   8|   methodB: () => any
        ^^^^^^^



Found 1 error
